--- a/google.html
+++ b/google.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOOGLE!</title>
+    <link rel="stylesheet" href="css/google.css">
 </head>
 <body>
+    <div class="container">
+        <img src="images/google.jpg" alt="google logo">
+        <div class="title">Search the web using Google! <br>
+            <input type="text" name="q" value="" size="60"> <br>
+            <button class="button">Google Search</button>
+            <button class="button">I'm feeling lucky</button> <br><br><br>
+            <div class="firstbox bgcolorone height mr">Special Searches <br>
+                <a href="https://web.archive.org/web/19990224014327/http://www.google.com/stanford">Stanford Search</a> <br>
+            <a href="https://web.archive.org/web/19990221231654/http://www.google.com/linux">Linux Search</a></div>
+            <div class="firstbox bgcolortwo height mr">
+                <a href="https://web.archive.org/web/19990221212930if_/http://www.google.com/help.html">Help!</a> <br>
+                <a href="#">About Google!</a> <br>
+                <a href="https://web.archive.org/web/19990221202430if_/http://www.google.com/company.html">Company İnfo</a> <br>
+                <a href="https://web.archive.org/web/19990224043535if_/http://www.google.com/stickers.html">Google! Logos</a> 
+            </div>
+            <div class="firstbox bgcolorthree height mr">
+                <p>Get Google! updates monthly</p>
+                <div>
+                    <input type="text" name="q" value="your e-mail" size="20">
+                    <br>
+                    <button class="button">Subscribe</button>
+                    <a href="#">Archive</a>
+                </div>
+            </div>   
+            <p>Copyright ©1998 Google Inc.</p>
+        </div>
+
+    </div>
+
     
 </body>
 </html>
